# Freely

./: .env.example  .gitignore  .stylelintrc.cjs  BASS_DOWNLOAD_CALLBACK_IMPLEMENTATION.md  BASS_LICENSE_NOTICE.md  BINARIES_LICENSE_NOTICE.md  FFMPEG_MIN_BUILD.md  LICENSE.md  README.md  SPOTIFY_API_CACHE.md  STYLES.md  index.html  package-lock.json  package.json  seed-out.json  signaling-server.js  splashscreen.html  tsconfig.electron.json  tsconfig.json  tsconfig.scrappers.json  tsconfig.tsbuildinfo  vite.config.ts  webpack.server.config.js
.clinerules/: freely-rules.md
.github/: copilot-instructions.md
config/: README.txt
dist-electron/: scrappers.js  torrent-search.js
docs/: PLUGINS.md
electron/: main.js  preload.js  torrent-search.js
public/: splash.css
public/plugins/: index.json
public/plugins/example/: manifest.json  plugin.js
scripts/: README.md  copy-sql-wasm.js  fetch-bass.js  fetch-youtubedl.js  fetch-ytdlp.js  update-version.js  vendor-webtorrent.js
server/: .torrent-server.pid  search-cache.json  server.js  testing.js  torrent-get-files.js  torrent-scrappers.js  torrent-server.js  utils.js
server/config/: constants.js  scrapers.js
server/managers/: CacheManager.js  ErrorHandler.js  LogManager.js  PidManager.js  ServerManager.js  TorrentFilesManager.js  TorrentManager.js  TorrentSearchManager.js  YtDlpManager.js
server/middleware/: cors.js  errorHandler.js
server/routes/: health.js  search.js  torrent.js  torrentFiles.js  youtube.js
server/utils/: YouTubeProxy.js  helpers.js  index.js  scoring.js  searchCache.js  stringUtils.js  webtorrent-loader.js
server/utils/shims/: node-datachannel.js  utp-native.js
src/: App.tsx  app.css  main.tsx  styles.css  tauri-shim.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/server-dist/: 460.server.bundle.js  server.bundle.js  server.bundle.js.LICENSE.txt  torrent-get-files.js  torrent-get-files.js.LICENSE.txt
src-tauri/src/: audio_settings.rs  bass.rs  cache.rs  commands.rs  downloads.rs  logging.rs  main.rs  paths.rs  playback.rs  plugins.rs  scrape.rs  server.rs  torrents.rs  utils.rs  window.rs  youtube.rs
src/components/: AddToPlaylistDemo.tsx  AddToPlaylistModal.tsx  AlbumInfoTab.tsx  ApiCacheTest.tsx  ArtistInfoTab.tsx  BottomPlayer.tsx  CenterPanel.tsx  CenterTabs.tsx  ContextMenu.tsx  DownloadsTab.tsx  GeniusTests.tsx  HomeTab.tsx  InfoHeader.tsx  LeftPanel.tsx  LeftPanelArtists.tsx  LeftPanelPlaylists.tsx  Library.tsx  LyricsDisplay.tsx  LyricsOverlay.tsx  MainPlayer.tsx  MoreFromArtist.tsx  NowPlayingTab.tsx  Player.tsx  PlaylistInfoTab.tsx  QueueTab.tsx  RightPanel.tsx  SearchResults.tsx  Settings.tsx  SmallPlayer.tsx  SongInfoTab.tsx  Tests.tsx  TitleBar.tsx  TrackList.tsx  TrackSources.tsx  tabHelpers.ts
src/components/CenterPanel/: AlbumInfo.tsx  ArtistInfo.tsx  Home.tsx  LyricsTab.tsx  PlaylistInfo.tsx  SearchResults.tsx  Settings.tsx  SongInfo.tsx  Tests.tsx
src/components/LeftPanel/: FollowedArtists.tsx  Playlists.tsx
src/components/RightPanel/: Downloads.tsx  (+3 more)
src/core/: AddToPlaylistModalContext.tsx  Appearance.tsx  ContextMenu.tsx  ContextMenuContext.tsx  Database.tsx  Downloads.tsx  FrontendLogger.tsx  Genius.tsx  Lyrics.tsx  LyricsProviders.tsx  PlaylistModal.tsx  PromptContext.tsx  SpotifyClient.tsx  TopChart.tsx  TorrentClient.tsx  accessEnv.tsx  alerts.tsx  appearance.ts  appearanceRuntime.ts  artists.tsx  audioCache.tsx  audioSource.tsx  chunker.tsx  db.tsx  dbIndexed.tsx  homeTops.tsx  i18n.tsx  lyrics-musixmatch.ts  musicdata.tsx  p2p.tsx  playback.tsx  playlists.tsx  pluginScripts.ts  ready.tsx  scrappers.tsx  spotify-client.tsx  spotify-helpers.ts  spotify.ts  tauriCommands.tsx  torrent-search.ts  (+2 more)
src/database/: sql-wasm.d.ts
src/lang/: en.json  es.json
src/styles/: alerts.css  background.css  base.css  center-tab.css  center-tabs.css  components.css  context-menu.css  home.css  layout.css  lyrics.css  now-playing.css  panels.css  pipmode.css  player.css  prompt.css  search-results.css  settings.css  tests.css  titlebar.css  variables.css
src/types/: customevents.d.ts  sqljs.d.ts  webtorrent-umd.d.ts  webtorrent.d.ts
worker/: module.js  worker.js
(+8 files in other folders)
