[package]
name = "freely_tauri"
version = "0.9.3"
description = "A local music player with torrent streaming support."
authors = ["Gottesman <gottesman@example.com>"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.23", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12.4", features = ["json", "gzip", "brotli", "stream"] }
anyhow = "1.0"
base64 = "0.22"
urlencoding = "2.1"
dirs = "5.0"
once_cell = "1.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
