[package]
name = "freely"
version = "1.4.0-alpha"
description = "A local music player with torrent streaming support."
authors = ["Gottesman <gottesman@example.com>"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = ["protocol-asset", "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { version = "0.12.4", features = ["json", "gzip", "brotli", "stream"] }
scraper = "0.19"
sha2 = "0.10"
anyhow = "1.0"
base64 = "0.22"
urlencoding = "2.1"
dirs = "5.0"
once_cell = "1.19.0"
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8"
futures-util = "0.3"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-prevent-default = "3"
tauri-plugin-notification = "2.3.1"
# tauri-plugin-shell = "2.3.1"
axum = { version = "0.7", features = ["macros"] }
tokio-util = { version = "0.7", features = ["io"] }
librqbit = { version = "8", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
torrent-rqbit = ["dep:librqbit"]

# Enable rqbit by default for development and builds
default = ["torrent-rqbit"]

[profile.release]
# Maximum optimization for size and speed
opt-level = "z"          # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization but slower compile
panic = "abort"         # Smaller binary size
strip = true            # Remove debug symbols

[profile.release-with-debug]
inherits = "release"
debug = true            # Keep debug info for profiling
strip = false
